Indreptari la Id

--- a/EFDataApp/Views/Curs/Components/ProfessorId/menu_prof.cshtml
+++ b/EFDataApp/Views/Curs/Components/ProfessorId/menu_prof.cshtml
@@ -24,7 +24,11 @@
                             <span style="width:45px; height:35px" class=" glyphicon glyphicon-th-list"></span>#Studentii ne-nregistrati
                         </a>
                     </li>
-
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" style="font-size:20px" asp-area="" asp-controller="Curs" asp-action="NoteStudent">
+                            <span style="width:45px; height:35px" class=" glyphicon glyphicon-th-list"></span>#Reusita studentilor 
+                        </a>
+                    </li>
 
                 </ul>
                 <ul class="navbar-nav ml-auto ">
