--- a/EFDataApp/Views/Student/MyCurs.cshtml
+++ b/EFDataApp/Views/Student/MyCurs.cshtml
@@ -23,7 +23,7 @@
     </style>
 </head>
 <body>
-    <p><h1 style="text-align:center">Disciplinele mele si reusita la ele</h1></p>
+    <p><h1 style="text-align:center">Disciplinele mele si reusita la ele a @ViewBag.name</h1></p>
     @foreach (var item in Model)
     {
 
