--- a/EFDataApp/Views/Curs/StudentList.cshtml
+++ b/EFDataApp/Views/Curs/StudentList.cshtml
@@ -3,21 +3,47 @@
 @{
     ViewBag.Title = "Lista de studenti inregistrati la curs";
 }
-<table class="table">
-    <p>Toti studentii</p>
+<head>
+    <style>
+        a {
+           
+            color: darkred;text-decoration-line:none;opacity:1;
+        }
+           
+
+      
+    </style>
+</head>
+<div style="        border: 10px solid black;
+        border-radius: inherit 10px;
+        background-color: rgb(40,40,40);text-align:center;opacity:0.9;
+">
+
+    <h1 style="color:antiquewhite">Lista de studenti inscrisi la curs: @ViewBag.Curs @ViewBag.CName</h1>
+<table class="table table-striped table-dark">
+    <thead>
+        <tr>
+            
+            <th scope="col">First</th>
+            <th scope="col">Last</th>
+            <th scope="col">Modifica</th>
+            <th scope="col">Sterge</th>
+        </tr>
+    </thead>
     @foreach (var item in Model)
     {
-<tr>
-    <td>@item.FirstName</td>
-    <td>@item.LastName</td>
+        <tr>
+            <td>@item.FirstName</td>
+            <td>@item.LastName</td>
 
-    <td>
-        <a asp-action="Change" asp-controller="curs" asp-route-id="@item.Id">Modifica Nota</a> |
-    </td>
-    <td>
-        <a asp-action="Delete" asp-controller="curs" asp-route-id="@item.Id">Sterge studentul</a> |
-    </td>
-</tr>
+            <td>
+                <a asp-action="Change" asp-controller="curs" asp-route-id="@item.Id">Modifica Nota</a> |
+            </td>
+            <td>
+                <a asp-action="Delete" asp-controller="curs" asp-route-id="@item.Id">Sterge studentul</a> |
+            </td>
+        </tr>
     }
 
 </table>
+</div>
