--- a/EFDataApp/Views/Admin/RegStudent.cshtml
+++ b/EFDataApp/Views/Admin/RegStudent.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewBag.Title = "Adaugarea studentului";
 }
-<form asp-action="create" asp-controller="student">
+<form asp-action="RegStudent" asp-controller="Admin">
     <div class="form-group">
         <label asp-for="FirstName" class="control-label">Prenume</label>
         <input type="text" asp-for="FirstName" class="form-control" />
