--- a/EFDataApp/Views/Admin/Components/MenuManager/menu_admin.cshtml
+++ b/EFDataApp/Views/Admin/Components/MenuManager/menu_admin.cshtml
@@ -12,7 +12,16 @@
                         </a>
 
                     </li>
-                   
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" style="font-size:20px" asp-area="" asp-controller="Admin" asp-action="ListCurs">
+                            <span style="width:45px; height:35px" class=" glyphicon glyphicon-th-list"></span>Cursuri
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" style="font-size:20px" asp-area="" asp-controller="Admin" asp-action="ListStudents">
+                            <span style="width:45px; height:35px" class=" glyphicon glyphicon-th-list"></span>Studenti
+                        </a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link text-dark" style="font-size:20px" asp-area="" asp-controller="Admin" asp-action="RegStudent">
                             <span style="width:45px; height:35px" class=" glyphicon glyphicon-th-list"></span>#Adauga student
