--- a/EFDataApp/Views/Admin/RegCurs.cshtml
+++ b/EFDataApp/Views/Admin/RegCurs.cshtml
@@ -2,24 +2,26 @@
 @{
     ViewBag.Title = "Adaugarea cursului";
 }
-<form asp-action="RegCurs" asp-controller="Admin">
-    <div class="form-group">
-        <label asp-for="Name" class="control-label">Denumirea</label>
-        <input type="text" asp-for="Name" class="form-control" />
-        <span asp-validation-for="Name"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="About" class="control-label">Despre</label>
-        <input type="text" asp-for="About" class="form-control" />
-        <span asp-validation-for="About"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="Profesor" class="control-label">Professor</label>
-        <input type="text" asp-for="Profesor" class="form-control" />
-        <span asp-validation-for="Profesor"></span>
-    </div>
-   
-    <div class="form-group">
-        <input type="submit" value="Trimite" class="btn btn-default" />
-    </div>
-</form>
+<div class="col-4 p-4 m-4 text-danger" style="background-color:rgba(255,255,255,0.2);border-radius:20px">
+    <form asp-action="RegCurs" asp-controller="Admin" >
+        <div class="form-group ">
+            <label asp-for="Name" class="control-label">Denumirea</label>
+            <input type="text" asp-for="Name" class="form-control" />
+            <span asp-validation-for="Name"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="About" class="control-label">Despre</label>
+            <input type="text" asp-for="About" class="form-control" />
+            <span asp-validation-for="About"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="Profesor" class="control-label">Professor</label>
+            <input type="text" asp-for="Profesor" class="form-control" />
+            <span asp-validation-for="Profesor"></span>
+        </div>
+
+        <div class="form-group">
+            <input type="submit" value="Trimite" class="btn btn-danger text-white" />
+        </div>
+    </form>
+</div>
