--- a/EFDataApp/Views/Admin/RegLogCurs.cshtml
+++ b/EFDataApp/Views/Admin/RegLogCurs.cshtml
@@ -2,23 +2,24 @@
 @{
     ViewBag.Title = "Loginul si parola a cursului";
 }
-<form asp-action="RegLogCurs" asp-controller="Admin">
+<div class="col-4 p-4 m-4 text-danger" style="background-color:rgba(255,255,255,0.2);border-radius:20px">
+    <form asp-action="RegLogCurs" asp-controller="Admin">
 
-    <div class="form-group">
+        <div class="form-group">
 
-        <label asp-for="Login" class="control-label">Login</label>
-        <input type="text" asp-for="Login" class="form-control" />
-        <span asp-validation-for="Login"></span>
-    </div>
-    <div class="form-group">
-        <input type="hidden" asp-for="CursId" class="form-control" value="@ViewBag.ID" />
-        <label asp-for="Password" class="control-label">Parola</label>
-        <input type="text" asp-for="Password" class="form-control" />
-        <span asp-validation-for="Password"></span>
-    </div>
+            <label asp-for="Login" class="control-label">Login</label>
+            <input type="text" asp-for="Login" class="form-control" />
+            <span asp-validation-for="Login"></span>
+        </div>
+        <div class="form-group">
+            <input type="hidden" asp-for="CursId" class="form-control" value="@ViewBag.ID" />
+            <label asp-for="Password" class="control-label">Parola</label>
+            <input type="text" asp-for="Password" class="form-control" />
+            <span asp-validation-for="Password"></span>
+        </div>
 
 
-    <div class="form-group">
-        <input type="submit" value="Trimite" class="btn btn-default" />
-    </div>
-</form>
+        <div class="form-group">
+            <input type="submit" value="Trimite" class="btn btn-danger text-white" />
+        </div>
+    </form></div>
