--- a/EFDataApp/Views/Admin/RegLogStudent.cshtml
+++ b/EFDataApp/Views/Admin/RegLogStudent.cshtml
@@ -2,10 +2,11 @@
     @{
     ViewBag.Title="Loginul si parola a studentului";
     }
-<form asp-action="RegLogStudent" asp-controller="Admin">
-      
+<div class="col-4 p-4 m-4 text-danger" style="background-color:rgba(255,255,255,0.2);border-radius:20px">
+    <form asp-action="RegLogStudent" asp-controller="Admin">
+
         <div class="form-group">
-            
+
             <label asp-for="Login" class="control-label">Login</label>
             <input type="text" asp-for="Login" class="form-control" />
             <span asp-validation-for="Login"></span>
@@ -18,7 +19,7 @@
         </div>
 
 
-    <div class="form-group">
-        <input type="submit" value="Trimite" class="btn btn-default" />
-    </div>
-</form>
+        <div class="form-group">
+            <input type="submit" value="Trimite" class="btn btn-danger text-white" />
+        </div>
+    </form></div>
