--- a/EFDataApp/Views/Admin/RegStudent.cshtml
+++ b/EFDataApp/Views/Admin/RegStudent.cshtml
@@ -2,38 +2,39 @@
 @{
     ViewBag.Title = "Adaugarea studentului";
 }
-<form asp-action="RegStudent" asp-controller="Admin">
-    <div class="form-group">
-        <label asp-for="FirstName" class="control-label">Prenume</label>
-        <input type="text" asp-for="FirstName" class="form-control" />
-        <span asp-validation-for="FirstName"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="LastName" class="control-label">Nume</label>
-        <input type="text" asp-for="LastName" class="form-control" />
-        <span asp-validation-for="LastName"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="Age" class="control-label">Virsta</label>
-        <input type="number" asp-for="Age" class="form-control" />
-        <span asp-validation-for="Age"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="About" class="control-label">Despre</label>
-        <input type="text" asp-for="About" class="form-control" />
-        <span asp-validation-for="About"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="Telefon" class="control-label">Telefon</label>
-        <input type="number" asp-for="Telefon" class="form-control" />
-        <span asp-validation-for="Telefon"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="Email" class="control-label">Email</label>
-        <input type="text" asp-for="Email" class="form-control" />
-        <span asp-validation-for="Email"></span>
-    </div>
-    <div class="form-group">
-        <input type="submit" value="Trimite" class="btn btn-default" />
-    </div>
-</form>
+<div class="col-4 p-4 m-4 text-danger" style="background-color:rgba(255,255,255,0.2);border-radius:20px">
+    <form asp-action="RegStudent" asp-controller="Admin">
+        <div class="form-group">
+            <label asp-for="FirstName" class="control-label">Prenume</label>
+            <input type="text" asp-for="FirstName" class="form-control" />
+            <span asp-validation-for="FirstName"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="LastName" class="control-label">Nume</label>
+            <input type="text" asp-for="LastName" class="form-control" />
+            <span asp-validation-for="LastName"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="Age" class="control-label">Virsta</label>
+            <input type="number" asp-for="Age" class="form-control" />
+            <span asp-validation-for="Age"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="About" class="control-label">Despre</label>
+            <input type="text" asp-for="About" class="form-control" />
+            <span asp-validation-for="About"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="Telefon" class="control-label">Telefon</label>
+            <input type="number" asp-for="Telefon" class="form-control" />
+            <span asp-validation-for="Telefon"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="Email" class="control-label">Email</label>
+            <input type="text" asp-for="Email" class="form-control" />
+            <span asp-validation-for="Email"></span>
+        </div>
+        <div class="form-group">
+            <input type="submit" value="Trimite" class="btn btn-danger text-white" />
+        </div>
+    </form></div>
