Am validat datele de intrare

--- a/EFDataApp/Views/Admin/RegisterSuccesCurs.cshtml
+++ b/EFDataApp/Views/Admin/RegisterSuccesCurs.cshtml
@@ -1,6 +1,23 @@
-﻿@model EFDataApp.Models.Curs
+﻿@model EFDataApp.Models.LogCurs
 @{
     ViewBag.Title = "Succes";
 }
-<h1>Login : @Model.Name</h1>
-<h1>Parola : @Model.Profesor</h1>
+<div class="row">
+    <div class="col-4"></div>
+    <div class="col-6">
+        <div class="container col-8 bg-white text-dark border border-danger rounded m-5 p-5">
+            <h3>Login : <span class="text-danger">@Model.Login</span> </h3>
+            <h3>Parola :<span class="text-danger"> @Model.Password</span></h3>
+            <div class="row">
+                <div class="col-10 "></div>
+                <div class="col-2">
+                    <a class="text-right" asp-area="" asp-controller="Admin" asp-action="ListCurs">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-arrow-left-circle-fill text-danger" viewBox="0 0 16 16">
+                            <path d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0zm3.5 7.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5z" />
+                        </svg>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
