--- a/EFDataApp/Views/Student/_Layout.cshtml
+++ b/EFDataApp/Views/Student/_Layout.cshtml
@@ -27,7 +27,7 @@
             @RenderBody()
         </main>
     </div>
-
+    <div class=""style="margin-bottom:10%"></div>
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2021 - EFDataApp -
