--- a/EFDataApp/Views/Admin/Components/MenuManager/menu_admin.cshtml
+++ b/EFDataApp/Views/Admin/Components/MenuManager/menu_admin.cshtml
@@ -1,43 +1,57 @@
 ﻿<header>
-    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-light border-bottom box-shadow mb-3">
+    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark   mb-3"
+         style="background-color:rgb(255, 255, 255,0.1)"
+         >
         <div class="container">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
-                <ul class="navbar-nav mr-auto ">
+                <ul class="navbar-nav mr-auto mr-5 ">
+
+                    <li class="nav-item dropdown text-white ml-3 mr-3">
+                        <a class="nav-link dropdown-toggle text-white" href="#" i data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Cursuri
+                        </a>
+                        <div class="dropdown-menu border-0" aria-labelledby="navbarDropdownMenuLink" style="background-color: rgb(255, 255, 255,0.0)">
+                            <a class="nav-link text-white" style="font-size:14px" asp-area="" asp-controller="Admin" asp-action="ListCurs">
+                                <span style="width:35px; height:25px" class=" glyphicon glyphicon-th-list"></span>Lista cursuri
+                            </a>
+                            <a class="nav-link text-white " style="font-size:14px" asp-area="" asp-controller="Admin" asp-action="RegCurs">
+                                <span style="width:35px; height:25px" class=" glyphicon glyphicon-th-list"></span>Adauga curs
+                            </a>
+
+                        </div>
+                    </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" style="font-size:20px" asp-area="" asp-controller="Admin" asp-action="Index" asp-route-id="@Model">
-                            <span class="glyphicon glyphicon-user"></span> #Despre mine
+                        <a class="nav-link text-white ml-2 mr-2" style="font-size:14px" asp-area="" asp-controller="Admin" asp-action="Index" asp-route-id="@Model">
+                            <span class="glyphicon glyphicon-user"></span>Despre aplicatie
                         </a>
 
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" style="font-size:20px" asp-area="" asp-controller="Admin" asp-action="ListCurs">
-                            <span style="width:45px; height:35px" class=" glyphicon glyphicon-th-list"></span>Cursuri
+                    <li class="nav-item dropdown text-white ml-3">
+                        <a class="nav-link dropdown-toggle text-white" href="#" i data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Studenti
                         </a>
+                        <div class="dropdown-menu border-0" aria-labelledby="navbarDropdownMenuLink" style="background-color: rgb(255, 255, 255,0.0)">
+                            <a class="nav-link text-white" style="font-size:14px" asp-area="" asp-controller="Admin" asp-action="ListStudents">
+                                <span style="width:35px; height:25px" class=" glyphicon glyphicon-th-list"></span>Lista studenti
+                            </a>
+                            <a class="nav-link text-white " style="font-size:14px" asp-area="" asp-controller="Admin" asp-action="RegStudent">
+                                <span style="width:35px; height:25px" class=" glyphicon glyphicon-th-list"></span>Adauga student
+                            </a>
+
+                        </div>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" style="font-size:20px" asp-area="" asp-controller="Admin" asp-action="ListStudents">
-                            <span style="width:45px; height:35px" class=" glyphicon glyphicon-th-list"></span>Studenti
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" style="font-size:20px" asp-area="" asp-controller="Admin" asp-action="RegStudent">
-                            <span style="width:45px; height:35px" class=" glyphicon glyphicon-th-list"></span>#Adauga student
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" style="font-size:20px" asp-area="" asp-controller="Admin" asp-action="RegCurs">
-                            <span style="width:45px; height:35px" class=" glyphicon glyphicon-th-list"></span>#Adauga curs
-                        </a>
-                    </li>
+
+
+
 
                 </ul>
                 <ul class="navbar-nav ml-auto ">
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Student" asp-action="LogOut">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="45" height="35" fill="currentColor" class="bi bi-power" viewBox="0 0 16 16">
+                        <a class="nav-link text-white " asp-area="" asp-controller="Student" asp-action="LogOut">
+                            <svg xmlns="http://www.w3.org/2000/svg" style="filter:invert(1)" width="35" height="22" fill="" class="bi bi-power text-white" viewBox="0 2 12 13">
                                 <path d="M7.5 1v7h1V1h-1z" />
                                 <path d="M3 8.812a4.999 4.999 0 0 1 2.578-4.375l-.485-.874A6 6 0 1 0 11 3.616l-.501.865A5 5 0 1 1 3 8.812z" />
                             </svg>
