--- a/EFDataApp/Views/Admin/ListStudents.cshtml
+++ b/EFDataApp/Views/Admin/ListStudents.cshtml
@@ -2,24 +2,53 @@
 @{
     ViewData["Title"] = "Lista studentilor";
 }
-<div class="container p-3 m-3" style="background-color:rgba(255,255,255,0.3);border-radius:20px">
-    <div class="text-center text-danger"><h1>Lista Studentilor</h1></div>
-    <div class="container text-white">
-        <div class="row justify-content-center">
-            @{ foreach (var el in Model)
-                {
 
-                    <div class="col-lg-3 m-3 p-3 rounded bg-dark text-center">
-                        <p>@el.FirstName</p>
-                        <p>@el.LastName</p>
-                        <p>@el.About</p>
-                        <p>@el.Email</p>
-                        <a class="btn-danger m-1 rounded p-2 text-white"
-                           asp-action="DelStudent" asp-controller="Admin" asp-route-id="@el.Id">Sterge student</a>
-                    </div>
+<div class="container mt-5 px-2 "style="background-color:rgb(255, 255, 255,0.4)">
+    <div class="mb-2 d-flex justify-content-between align-items-center">
+        <div class="position-relative"> <span class="position-absolute search"><i class="fa fa-search"></i></span>  </div>
+        
+    </div>
+    <div class="table-responsive">
+        <table class="table table-responsive table-borderless">
+            <thead>
+                <tr class="bg-white text-danger">
+                    <th scope="col" width="0%"><input class="form-check-input" type="checkbox"></th>
+                    <th scope="col" width="5%">Prenume</th>
+                    <th scope="col" width="10%">Nume</th>
+                    <th scope="col" width="15%">Email</th>
 
-                }
-            }
-        </div>
+                    <th scope="col" width="45%">Despre</th>
+                    <th scope="col" class="text-end" width="10%"><span>Sterge </span></th>
+                    <th scope="col" class="text-end" width="10%"><span>Date de acces </span></th>
+                </tr>
+            </thead>
+            <tbody>
+                @{ foreach (var el in Model)
+                    {
+                                <tr>
+                                    <th scope="row"><input class="form-check-input" type="checkbox"></th>
+                                    <td>@el.FirstName</td>
+                                    <td>@el.LastName</td>
+                                    <td class="">@el.Email</td>
+
+                                    <td>@el.About</td>
+                                    <td class="text-end">
+                                        <a class=""
+                                           asp-action="DelStudent" asp-controller="Admin" asp-route-id="@el.Id">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-trash text-danger" viewBox="0 0 16 16 ">
+                                                <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z" />
+                                                <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z" />
+                                            </svg>
+                                        </a>
+                                    </td>
+                                    
+                                    <td><a asp-action="RegisterSuccesStud" asp-controller="Admin" asp-route-id="@el.Id"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-blockquote-right text-danger" viewBox="0 0 16 16">
+    <path d="M2.5 3a.5.5 0 0 0 0 1h11a.5.5 0 0 0 0-1h-11zm0 3a.5.5 0 0 0 0 1h6a.5.5 0 0 0 0-1h-6zm0 3a.5.5 0 0 0 0 1h6a.5.5 0 0 0 0-1h-6zm0 3a.5.5 0 0 0 0 1h11a.5.5 0 0 0 0-1h-11zm10.113-5.373a6.59 6.59 0 0 0-.445-.275l.21-.352c.122.074.272.17.452.287.18.117.35.26.51.428.156.164.289.351.398.562.11.207.164.438.164.692 0 .36-.072.65-.216.873-.145.219-.385.328-.721.328-.215 0-.383-.07-.504-.211a.697.697 0 0 1-.188-.463c0-.23.07-.404.211-.521.137-.121.326-.182.569-.182h.281a1.686 1.686 0 0 0-.123-.498 1.379 1.379 0 0 0-.252-.37 1.94 1.94 0 0 0-.346-.298zm-2.168 0A6.59 6.59 0 0 0 10 6.352L10.21 6c.122.074.272.17.452.287.18.117.35.26.51.428.156.164.289.351.398.562.11.207.164.438.164.692 0 .36-.072.65-.216.873-.145.219-.385.328-.721.328-.215 0-.383-.07-.504-.211a.697.697 0 0 1-.188-.463c0-.23.07-.404.211-.521.137-.121.327-.182.569-.182h.281a1.749 1.749 0 0 0-.117-.492 1.402 1.402 0 0 0-.258-.375 1.94 1.94 0 0 0-.346-.3z" />
+</svg></a></td>
+                                </tr>
+
+                    }}
+            </tbody>
+        </table>
     </div>
 </div>
