--- a/EFDataApp/Views/Admin/RegCurs.cshtml
+++ b/EFDataApp/Views/Admin/RegCurs.cshtml
@@ -2,26 +2,43 @@
 @{
     ViewBag.Title = "Adaugarea cursului";
 }
-<div class="col-4 p-4 m-4 text-danger" style="background-color:rgba(255,255,255,0.2);border-radius:20px">
-    <form asp-action="RegCurs" asp-controller="Admin" >
-        <div class="form-group ">
-            <label asp-for="Name" class="control-label">Denumirea</label>
-            <input type="text" asp-for="Name" class="form-control" />
-            <span asp-validation-for="Name"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="About" class="control-label">Despre</label>
-            <input type="text" asp-for="About" class="form-control" />
-            <span asp-validation-for="About"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="Profesor" class="control-label">Professor</label>
-            <input type="text" asp-for="Profesor" class="form-control" />
-            <span asp-validation-for="Profesor"></span>
-        </div>
 
-        <div class="form-group">
-            <input type="submit" value="Trimite" class="btn btn-danger text-white" />
+<div class="row justify-content-center m-5">
+    <div class="col-2"></div>
+    <div class=" container col-5">
+        <div class="login-form-1 mt-5 rounded p-4" style="background-color: rgb(150, 150, 150, 0.4)">
+            <h1 class="text-white">Inregistreaza cursul </h1>
+            <form id="login-form" class="text-left" novalidate="novalidate" asp-action="regCurs" asp-controller="admin">
+                <div class="main-login-form">
+                    <div class="login-group">
+
+                        <div class="form-group">
+
+                            <label asp-for="Name" class="control-label">Denumire</label>
+                            <input type="text" asp-for="Name" class="form-control" />
+                        </div>
+                        <div class="m-2 text-center"><h6 class="text-danger">@ViewBag.NameErr</h6></div>
+                        <div class="form-group">
+                            <label asp-for="Profesor" class="control-label">Professor</label>
+                            <input type="text" asp-for="Profesor" class="font-weight-bold form-control font-weight-bold" />
+                        </div>
+                        <div class="m-2 text-center"><h6 class="text-danger">@ViewBag.ProfessorErr</h6></div>
+                        <div class="form-group">
+                            <label asp-for="About" class="control-label">Despre</label>
+                            <input type="text" asp-for="About" class="font-weight-bold form-control font-weight-bold" />
+                        </div>
+                        <div class="m-2 text-center"><h6 class="text-danger">@ViewBag.AboutErr</h6></div>
+                        <button type="submit" class="login-button"><i class="fa fa-chevron-right"></i></button>
+                        <div class="m-2 text-center text-danger bg-white rounded">
+                            <h6 class="">@ViewBag.ErrExist</h6>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="m-2 text-center text-danger bg-white rounded">
+
+                </div>
+            </form>
         </div>
-    </form>
+    </div>
 </div>
