--- a/EFDataApp/Views/Admin/RegLogCurs.cshtml
+++ b/EFDataApp/Views/Admin/RegLogCurs.cshtml
@@ -2,24 +2,39 @@
 @{
     ViewBag.Title = "Loginul si parola a cursului";
 }
-<div class="col-4 p-4 m-4 text-danger" style="background-color:rgba(255,255,255,0.2);border-radius:20px">
-    <form asp-action="RegLogCurs" asp-controller="Admin">
 
-        <div class="form-group">
+<div class="row justify-content-center m-5">
+    <div class="col-2"></div>
+    <div class=" container col-5">
+        <div class="login-form-1 mt-5 rounded p-4" style="background-color: rgb(150, 150, 150, 0.4)">
+            <h1 class="text-white">Inregistreaza login-parola  </h1>
+            <form id="login-form" class="text-left" novalidate="novalidate" asp-action="regLogCurs" asp-controller="admin">
+                <div class="main-login-form">
+                    <div class="login-group">
 
-            <label asp-for="Login" class="control-label">Login</label>
-            <input type="text" asp-for="Login" class="form-control" />
-            <span asp-validation-for="Login"></span>
+                        <div class="form-group">
+                            <input type="hidden" asp-for="CursId" class="form-control" value="@ViewBag.ID" />
+                            <label asp-for="Login" class="control-label">Login</label>
+                            <input type="text" asp-for="Login" class="form-control" />
+                        </div>
+                        <div class="m-2 text-center"><h6 class="text-danger">@ViewBag.LoginErr</h6></div>
+                        <div class="form-group">
+                            <label asp-for="Password" class="control-label">Paswword</label>
+                            <input type="password" asp-for="Password" class="font-weight-bold form-control font-weight-bold" />
+                        </div>
+                        <div class="m-2 text-center"><h6 class="text-danger">@ViewBag.PasswordErr</h6></div>
+
+                        <button type="submit" class="login-button"><i class="fa fa-chevron-right"></i></button>
+                        <div class="m-2 text-center text-danger bg-white rounded">
+                            <h6 class="">@ViewBag.ErrExist</h6>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="m-2 text-center text-danger bg-white rounded">
+
+                </div>
+            </form>
         </div>
-        <div class="form-group">
-            <input type="hidden" asp-for="CursId" class="form-control" value="@ViewBag.ID" />
-            <label asp-for="Password" class="control-label">Parola</label>
-            <input type="text" asp-for="Password" class="form-control" />
-            <span asp-validation-for="Password"></span>
-        </div>
-
-
-        <div class="form-group">
-            <input type="submit" value="Trimite" class="btn btn-danger text-white" />
-        </div>
-    </form></div>
+    </div>
+</div>
