--- a/EFDataApp/Views/Admin/RegStudent.cshtml
+++ b/EFDataApp/Views/Admin/RegStudent.cshtml
@@ -2,39 +2,68 @@
 @{
     ViewBag.Title = "Adaugarea studentului";
 }
-<div class="col-4 p-4 m-4 text-danger" style="background-color:rgba(255,255,255,0.2);border-radius:20px">
-    <form asp-action="RegStudent" asp-controller="Admin">
-        <div class="form-group">
-            <label asp-for="FirstName" class="control-label">Prenume</label>
-            <input type="text" asp-for="FirstName" class="form-control" />
-            <span asp-validation-for="FirstName"></span>
+
+<div class="row m-2 text-dark">
+   
+    <div class=" container">
+        <div class="login-form-1 m-3 rounded p-4" style="background-color: rgb(150, 150, 150, 0.5); min-width:600px">
+            <h3 class="text-danger text-center">Inregistreaza student</h3>
+            <form id="login-form" class="text-left" novalidate="novalidate" asp-action="RegStudent" asp-controller="admin">
+                <div class="main-login-form">
+                    <div class="login-group">
+                        <div class="row">
+                            <div class="col-6 border-right border-light">
+                                <div class="form-group">
+                                    <label asp-for="FirstName" class="control-label text-dark">Prenumele</label>
+                                    <input type="text" asp-for="FirstName" class="form-control" />
+                                </div>
+                                <div class="m-2 text-center"><h6 class="text-danger">@ViewBag.FirstNameErr</h6></div>
+                                <div class="form-group">
+                                    <label asp-for="LastName" class="control-label text-dark">Numele</label>
+                                    <input type="text" asp-for="LastName" class="font-weight-bold form-control font-weight-bold" />
+                                </div>
+                                <div class="m-2 text-center"><h6 class="text-danger">@ViewBag.LastNameErr</h6></div>
+                                <div class="form-group">
+                                    <label asp-for="Age" class="control-label text-dark">Virsta</label>
+                                    <input type="number" asp-for="Age" class="form-control" />
+                                </div>
+                                <div class="m-2 text-center"><h6 class="text-danger">@ViewBag.AgeErr</h6></div>
+                                <div class="form-group">
+                                    <label asp-for="Telefon" class="control-label text-dark">Mobil</label>
+                                    <input type="number" asp-for="Telefon" class="font-weight-bold form-control font-weight-bold" />
+                                </div>
+                                <div class="m-2 text-center"><h6 class="text-danger">@ViewBag.TelefonErr</h6></div>
+
+
+
+                            </div>
+                            <div class="col-6">
+                                <div class="form-group">
+                                    <label asp-for="Email" class="control-label text-dark">Adresa email</label>
+                                    <input type="text" asp-for="Email" class="form-control" />
+                                </div>
+                                <div class="m-2 text-center"><h6 class="text-danger">@ViewBag.EmailErr</h6></div>
+                                <div class="form-group">
+                                    <label name="About" class="control-label text-dark">Descriere</label>
+
+                                    <textarea class="form-control z-depth-1 border-bottom rounded" name="About"
+                                              id="exampleFormControlTextarea6" rows="8" placeholder="Adauga descrierea studentului..."></textarea>
+                                </div>
+                                <div class="m-2 text-center text-danger"><h6>@ViewBag.AboutErr</h6></div>
+                            </div>
+
+                            <button type="submit" class="login-button"><i class="fa fa-chevron-right"></i></button>
+                            <div class="m-2 text-center text-danger bg-white rounded">
+                                <h6 class="">@ViewBag.ErrExist</h6>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="m-2 text-center text-danger bg-white rounded">
+
+                </div>
+            </form>
         </div>
-        <div class="form-group">
-            <label asp-for="LastName" class="control-label">Nume</label>
-            <input type="text" asp-for="LastName" class="form-control" />
-            <span asp-validation-for="LastName"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="Age" class="control-label">Virsta</label>
-            <input type="number" asp-for="Age" class="form-control" />
-            <span asp-validation-for="Age"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="About" class="control-label">Despre</label>
-            <input type="text" asp-for="About" class="form-control" />
-            <span asp-validation-for="About"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="Telefon" class="control-label">Telefon</label>
-            <input type="number" asp-for="Telefon" class="form-control" />
-            <span asp-validation-for="Telefon"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="Email" class="control-label">Email</label>
-            <input type="text" asp-for="Email" class="form-control" />
-            <span asp-validation-for="Email"></span>
-        </div>
-        <div class="form-group">
-            <input type="submit" value="Trimite" class="btn btn-danger text-white" />
-        </div>
-    </form></div>
+    </div>
+</div>
