--- a/EFDataApp/Views/Admin/_Layout.cshtml
+++ b/EFDataApp/Views/Admin/_Layout.cshtml
@@ -11,22 +11,23 @@
     <link rel="canonical" href="https://mdbootstrap.com/docs/b4/jquery/css/hover-effects/" />
     <script src="~/Scripts/jquery-1.10.2.js"></script>
     <script src="~/Scripts/jquery.unobtrusive-ajax.js"></script>
+    <link rel="stylesheet" href="~/css/form.css" />
 
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 
-<body style="background-image:url(/img/vm.jpg);">
+<body style="background-image: url(/img/vm.jpg);">
 
     @await Component.InvokeAsync("MenuManager");
 
 
-    <div class="container">
+    <div class="container" style="margin-bottom:10%">
         <main role="main" class="">
             @RenderBody()
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer text-muted text-white">
         <div class="container">
             &copy; 2021 - EFDataApp -
         </div>
