--- a/EFDataApp/wwwroot/css/site.css
+++ b/EFDataApp/wwwroot/css/site.css
@@ -54,18 +54,19 @@ button.accept-policy {
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
-  position: relative;
+    position: relative;
   min-height: 100%;
 }
 
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+    min-height: 100%;
+    /* Margin bottom by footer height */
+    
 }
 .footer {
   position: absolute;
   bottom: 0;
   width: 100%;
   white-space: nowrap;
-  line-height: 60px; /* Vertically center the text there */
+  line-height: 80px; /* Vertically center the text there */
 }
